fix text overflow with long titles

--- a/_sass/world/modules/_agenda.scss
+++ b/_sass/world/modules/_agenda.scss
@@ -83,6 +83,7 @@
 
     a {
       color: var(--purple-dark);
+      overflow-wrap: anywhere;
 
       &:hover {
         text-decoration-color: var(--purple-dark);
