--- a/_sass/world/modules/_speaker.scss
+++ b/_sass/world/modules/_speaker.scss
@@ -67,6 +67,7 @@
 
     h3 {
       padding-bottom: var(--space-small);
+      line-height: 150%;
     }
 
     a:hover {
